# ips-dev

./: .gitignore  AUTHORS  CMakeLists.txt  Makefile  README.md  Readme.md
doc/: Doxyfile
pres/: index.html
scripts/: csv_plotter.py
src/: Derivator.cpp  Derivator.h  Hermite.cpp  Hermite.h  OrthogonalityChecker.cpp  OrthogonalityChecker.h  Saver.cpp  Saver.h  SolverSchrodinger.cpp  SolverSchrodinger.h  check_orthogonality.cpp  check_orthogonality.h  constants.h  derivator.cpp  derivator.h  hermite.cpp  hermite.h  hermite_coefs.h  main.cpp  main.h  saver.cpp  saver.h  solverschrodinger.cpp  solverschrodinger.h
src/hermite_coeffs/: get_coeffs.py
src/plotter/: plotter.py  test.csv
tests/: test1.cpp  testsDerivator.cpp  testsHermite.cpp  testsOrthogonalityChecker.cpp  testsSolverSchrodinger.cpp  tests_derivator.cpp  tests_hermite.cpp  tests_orthogonality.cpp  tests_solverschrodinger.cpp
